at-spi-bus-launcher: register with session manager

This application is started in Initialization phase. In this phase
it is required to register with session manager. See:
https://wiki.gnome.org/Projects/SessionManagement/NewGnomeSession

https://bugzilla.gnome.org/show_bug.cgi?id=753931